--- a/assets/css/style.light.css
+++ b/assets/css/style.light.css
@@ -33063,9 +33063,7 @@ h6,
   transition: none !important;
 }
 
-.theme-light-show {
-  display: none !important;
-}
+
 
 html:not([data-theme=dark]) .theme-light-bg-transparent {
   background-color: transparent !important;
@@ -58314,10 +58312,11 @@ em {
 }
 
 .refresh {
-  all: unset;
-  position: absolute;
-  right: 15px;
-  top: 15px;
+    all: unset;
+    position: absolute;
+    right: 15px;
+   
+    top: 15px;
 }
 
 .refresh img {
@@ -58391,9 +58390,10 @@ em {
   margin-top: 3px;
 }
 
-.consumed p em {
-  color: #BCBCCB;
-}
+    .consumed p em {
+        color: #BCBCCB;
+        display: block
+    }
 
 .consumed h4 {
   margin: 0;
@@ -58519,6 +58519,15 @@ em {
   flex-direction: column;
   margin-top: 20px;
   background: #763086;
+}
+
+.loyalty-statistics.no-loyalty img{
+  margin-bottom: 10px;
+}
+
+.loyalty-statistics.no-loyalty p{
+  margin: 0;
+  font-size: 16px;
 }
 
 .loyalty-statistics h3 {
@@ -58881,11 +58890,11 @@ em {
 }
 
 .apexcharts-radialbar-track.apexcharts-track path {
-  stroke: #1d0c2e;
+  stroke: #aa20a6;
 }
 
 .apexcharts-series.apexcharts-radial-series path {
-  stroke: #aa20a6;
+  stroke: #1d0c2e;  
 }
 
 .certificate,
@@ -58987,6 +58996,11 @@ em {
   display: flex;
   gap: 10px;
   align-items: center;
+}
+
+.title-part .refresh {
+  top: 0;
+  right: 0;
 }
 
 .title-part img {
@@ -59721,6 +59735,9 @@ div.dataTables_wrapper div.dataTables_length select:focus {
   background: #1d0c2e;
   background: linear-gradient(to right, #1d0c2e, #2e1b41);
   width: max-content;
+  max-width: 100%;
+  flex-wrap: wrap;
+  row-gap: 10px;
 }
 
 .dts-billing .port-ul li {
@@ -59729,6 +59746,19 @@ div.dataTables_wrapper div.dataTables_length select:focus {
 
 .dts-billing .port-ul li span {
   font-size: 15px;
+}
+
+.dts-billing .port-ul li input {
+  padding: 0;
+    margin: 0;
+    border: 0;
+    background: unset;
+    letter-spacing: .2px;
+    font-size: 15px;
+    color: #111;
+    width: 200px;
+    outline: unset;
+    box-shadow: unset;
 }
 
 .dts-billing .port-ul li p {
@@ -59786,13 +59816,13 @@ div.dataTables_wrapper div.dataTables_length select:focus {
 }
 
 .usage-div .chart-div .usage-chart .circle-progress-value {
-  stroke-width: 5px;
-  stroke: #aa20a6;
+  stroke-width: 6px;
+  stroke: #381d53;
 }
 
 .usage-div .chart-div .usage-chart .circle-progress-circle {
   stroke-width: 5px;
-  stroke: #381d53;
+  stroke: #aa20a6;
 }
 
 .usage-div .chart-div .usage-chart .circle-progress-text {
@@ -59947,6 +59977,10 @@ table p {
   margin-top: 20px;
 }
 
+.consumption-list.active .cur-p i::before {
+  content: "\f57a";
+}
+
 .consumption-list p {
   display: flex;
   justify-content: space-between;
@@ -60003,6 +60037,18 @@ table p {
   font-weight: normal;
   font-size: 16px;
   margin: 0;
+}
+
+.cur-p {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.cur-p i {
+  font-size: 20px;
+  color: initial;
 }
 
 /* responsive */
@@ -61046,16 +61092,25 @@ div.dataTables_wrapper div.dataTables_length select:focus {
 .loyalty-chart .circle-progress-value,
 .apexcharts-series.apexcharts-radial-series path,
 .usage-div .chart-div .usage-chart .circle-progress-value {
+  stroke: #d2d6e5;
+  stroke-width: 23px;
+}
+
+.usage-div .chart-div .usage-chart .circle-progress-value {
+    stroke-width: 6px;
+    stroke: #702283;
+}
+
+.apexcharts-radialbar-track.apexcharts-track path{
   stroke: #702283;
 }
 
-.apexcharts-radialbar-track.apexcharts-track path,
 .usage-div .chart-div .usage-chart .circle-progress-circle {
-  stroke: #d2d6e5;
+    stroke: #d2d6e5;
 }
 
 .usage-div .chart-div .usage-chart .circle-progress-text {
-  fill: #702283;
+    fill: #702283;
 }
 
 .usage-div .chart-div .remaining-consumed-modal p span {
