--- a/assets/css/style.dark.css
+++ b/assets/css/style.dark.css
@@ -60367,17 +60367,34 @@ table p {
   align-items: center;
   gap: 15px;
   flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .awards {
   display: flex;
   align-items: center;
-  gap: 20px;
+  gap: 12px;
   padding: 15px;
 }
 
+.awards li:not(:last-child) {
+  border-right: 1px solid #ffffff1f;
+  padding-right: 12px;
+}
+
 .awards li img {
-  height: 50px;
+  height: 38px
+}
+
+.grid-charts {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 30px;
+}
+
+.echart {
+  height: 280px;
+  direction: ltr;
 }
 
 /* responsive */
